--- a/Unosquare.FFME.Windows.Sample/Controls/PlaylistPanelControl.xaml
+++ b/Unosquare.FFME.Windows.Sample/Controls/PlaylistPanelControl.xaml
@@ -27,7 +27,7 @@
                             <ColumnDefinition />
                             <ColumnDefinition Width="20" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="Quick Search . . ." FontWeight="Bold" Padding="4,0,0,0"
+                        <TextBlock Text="{DynamicResource QSearch}" FontWeight="Bold" Padding="4,0,0,0"
                                    VerticalAlignment="Center" IsHitTestVisible="False">
                             <TextBlock.Style>
                                 <Style TargetType="TextBlock">
@@ -48,7 +48,7 @@
                     </Grid>
                 </Border>
                 <Grid Grid.Column="1">
-                    <ToggleButton IsChecked="{Binding Playlist.IsInOpenMode}" DockPanel.Dock="Top" Style="{DynamicResource ModernToggleButtonStyle}" x:Name="AddToggleButton" ToolTip="Open ...">
+                    <ToggleButton IsChecked="{Binding Playlist.IsInOpenMode}" DockPanel.Dock="Top" Style="{DynamicResource ModernToggleButtonStyle}" x:Name="AddToggleButton" ToolTip="{DynamicResource open}">
                         <Path Stretch="Uniform" Data="{Binding Source={StaticResource AddIcon}, Path=Data}" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type ToggleButton}}}" />
                     </ToggleButton>
                 </Grid>
@@ -82,7 +82,7 @@
                 </Grid.Style>
                 <Border CornerRadius="8" BorderThickness="1" Padding="10,2,10,2" Background="#ddffffff" Margin="6">
                     <Grid>
-                        <TextBlock Text="Full path to file or URL (Press Enter to open)" 
+                        <TextBlock Text="{DynamicResource Fpath}" 
                                    FontWeight="Bold" Padding="4,0,0,0"
                                    VerticalAlignment="Center" IsHitTestVisible="False">
                             <TextBlock.Style>
